--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -940,6 +940,27 @@
     "    plt.ylabel(col)\n",
     "    plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d4751fd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(95662, 15)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   }
  ],
  "metadata": {
